syntax = "proto3";

package nspass.service.v1;

import "model/user.proto";

// 用户服务请求响应
message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  nspass.model.v1.User user = 1;
  bool success = 2;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  nspass.model.v1.UserRole role_filter = 3;
}

message ListUsersResponse {
  repeated nspass.model.v1.User users = 1;
  int32 total = 2;
} 